# opencv_snippets

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  MODULE.bazel  README.md  build_opencv_windows.ps1  hello_main.cc  link_opencv_windows.ps1  mat_test.cc
barcode/: BUILD.bazel  barcode_detector_main.cc
bird_eye/: proto_utils.cc  proto_utils.h  proto_utils_test.cc
bird_eye/proto/: calibration_data.proto
calibration/: BUILD.bazel  birdeye.cc  birdeye.h  calibration.cc  calibration.h  calibration_config.proto  calibration_conversions.cc  calibration_conversions.h  calibration_data.proto  calibration_test.cc  intrinsic.cc  intrinsic.h
convolution/: BUILD.bazel  convolution_test.cc  filters.cc  filters.h  main.cc
fft/: BUILD.bazel  fft.cc  fft.h  main.cc
histograms/: BUILD.bazel  histograms.cc  histograms.h  main.cc
image_analysis/: BUILD.bazel  canny_main.cc  histogram_equalization_main.cc  noise_reduction_main.cc  sobel.m  whitening_main.cc
keypoints/: BUILD.bazel  keypoints.cc  keypoints.h  main.cc
misc/: BUILD.bazel  main.cc  misc.cc  misc.h
ml/: BUILD.bazel  decision_trees.cc  detect_faces.cc  kmeans.cc  ml.h
optical_flow/: BUILD.bazel  farneback_main.cc  lk.md  lucas_kanade_main.cc
round_corners/: BUILD.bazel  interactive_main.cc  round_corners_detector.cc  round_corners_detector.h
sfm/: BUILD.bazel  reconstruction.cc  reconstruction.h  reconstruction_test.cc  run_main.cc
sfm/py/: visualize.py
stitcher/: BUILD.bazel  stitcher_main.cc
testdata/calibration/: intrinsics.xml
testdata/sfm/: bottle.ply
tracking/: BUILD.bazel  kalman.cc  main.cc  tracking.h
transformations/: BUILD.bazel  birdeye.cc  birdeye.h  birdeye_main.cc  calibration.h  homography_main.cc  main.cc  proto_utils.cc  proto_utils.h  proto_utils_test.cc  transformations.cc  transformations.h
transformations/proto/: BUILD.bazel  calibration_data.proto
transformations/testdata/: pixel_6a_calibration.txtpb
util/: BUILD.bazel  status_macros.h
