load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

# bazel run //:buildifier
# .. or warn
buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./bazel-*/*",
        "./.git/*",
    ],
    lint_mode = "fix",
)

# "-DWITH_FFMPEG=OFF" is for https://github.com/opencv/opencv/issues/22748
cmake(
    name = "opencv",
    cache_entries = select({
        "@platforms//os:linux": {
            "BUILD_LIST": "calib3d,core,features2d,highgui,imgcodecs,imgproc,objdetect,video,videoio,ml,stitching",
            "WITH_FFMPEG": "ON",
            "WITH_GTK": "OFF",
            "WITH_QT": "ON",
        },
        "@platforms//os:macos": {
            "BUILD_LIST": "calib3d,core,features2d,highgui,imgcodecs,imgproc,objdetect,video,videoio,ml,stitching",
            "WITH_FFMPEG": "ON",
            "WITH_GTK": "OFF",
            "WITH_QT": "OFF",
            "WITH_COCOA": "ON",
        },
        "@platforms//os:windows": {
            "BUILD_LIST": "calib3d,core,features2d,highgui,imgcodecs,imgproc,objdetect,video,videoio,ml,stitching",
            "WITH_FFMPEG": "ON",
            "OPENCV_GENERATE_PKGCONFIG": "OFF",
            "CMAKE_DISABLE_FIND_PACKAGE_PkgConfig": "TRUE",
            "WITH_GTK": "OFF",
            "WITH_QT": "OFF",
        },
    }),
    lib_source = "@opencv//:all",
    out_include_dir = "include/opencv4",
    out_shared_libs = select({
        "@platforms//os:linux": [
            "libopencv_ml.so.411",
            "libopencv_calib3d.so.411",
            "libopencv_core.so.411",
            "libopencv_flann.so.411",
            "libopencv_features2d.so.411",
            "libopencv_highgui.so.411",
            "libopencv_imgcodecs.so.411",
            "libopencv_imgproc.so.411",
            "libopencv_video.so.411",
            "libopencv_videoio.so.411",
            "libopencv_stitching.so.411",
            "libopencv_objdetect.so.411",
        ],
        "@platforms//os:macos": [
            "libopencv_ml.411.dylib",
            "libopencv_calib3d.411.dylib",
            "libopencv_core.411.dylib",
            "libopencv_flann.411.dylib",
            "libopencv_features2d.411.dylib",
            "libopencv_highgui.411.dylib",
            "libopencv_imgcodecs.411.dylib",
            "libopencv_imgproc.411.dylib",
            "libopencv_video.411.dylib",
            "libopencv_videoio.411.dylib",
            "libopencv_stitching.411.dylib",
            "libopencv_objdetect.411.dylib",
        ],
        "@platforms//os:windows": [
            "libopencv_ml.411.dll",
            "libopencv_calib3d.411.dll",
            "libopencv_core.411.dll",
            "libopencv_flann.411.dll",
            "libopencv_features2d.411.dll",
            "libopencv_highgui.411.dll",
            "libopencv_imgcodecs.411.dll",
            "libopencv_imgproc.411.dll",
            "libopencv_video.411.dll",
            "libopencv_videoio.411.dll",
            "libopencv_stitching.411.dll",
            "libopencv_objdetect.411.dll",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

cc_test(
    name = "mat_test",
    srcs = ["mat_test.cc"],
    data = ["testdata"],
    deps = [
        "//:opencv",
        "@absl//absl/strings",
        "@bazel_tools//tools/cpp/runfiles",
        "@glog",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "hello_main",
    srcs = ["hello_main.cc"],
    data = [
        "//testdata",
    ],
    deps = [
        "//calibration:birdeye",
        "//calibration:intrinsic",
        "//convolution:filters",
        "//fft",
        "//histograms",
        "//keypoints",
        "//misc",
        "//ml:decision_trees",
        "//ml:kmeans",
        "//tracking",
        "//transformations",
        "@absl//absl/strings",
        "@gflags",
        "@glog",
    ],
)
