load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

# bazel run //:buildifier
# .. or warn
buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./bazel-*/*",
        "./.git/*",
    ],
    lint_mode = "fix",
)

cc_library(
    name = "opencv_release",
    srcs = select({
        "@platforms//os:linux": glob(
            ["third_party/opencv/lib/*.so*"],
            allow_empty = True,
        ),
        "@platforms//os:macos": glob(
            ["third_party/opencv/lib/*.dylib"],
            allow_empty = True,
        ),
        "@platforms//os:windows": glob(
            [
                "third_party/opencv/release/x64/vc17/lib/*.lib",
                "third_party/opencv/release/x64/vc17/bin/*.dll",
            ],
            allow_empty = True,
        ),
    }),
    hdrs = glob(
        ["third_party/opencv/include/**/*"],
        allow_empty = True,
    ),
    includes = ["third_party/opencv/include"],
)

cc_library(
    name = "opencv_debug",
    srcs = select({
        "@platforms//os:linux": glob(
            ["third_party/opencv/lib_debug/*.so*"],
            allow_empty = True,
        ),
        "@platforms//os:macos": glob(
            ["third_party/opencv/lib_debug/*.dylib"],
            allow_empty = True,
        ),
        "@platforms//os:windows": glob(
            [
                "third_party/opencv/debug/x64/vc17/lib/*.lib",
                "third_party/opencv/debug/x64/vc17/bin/*.dll",
            ],
            allow_empty = True,
        ),
    }),
    hdrs = glob(
        ["third_party/opencv/include_debug/**/*"],
        allow_empty = True,
    ),
    includes = ["third_party/opencv/include_debug"],
)

config_setting(
    name = "debug_build",
    values = {"compilation_mode": "dbg"},
)

cc_library(
    name = "opencv",
    visibility = ["//visibility:public"],
    deps = select({
        ":debug_build": [":opencv_release"],
        "//conditions:default": [":opencv_release"],
    }),
)

cc_test(
    name = "mat_test",
    srcs = ["mat_test.cc"],
    data = ["testdata"],
    deps = [
        "//:opencv",
        "@absl//absl/strings",
        "@bazel_tools//tools/cpp/runfiles",
        "@glog",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "hello_main",
    srcs = ["hello_main.cc"],
    data = [
        "//testdata",
    ],
    deps = [
        "//calibration:intrinsic",
        "//convolution:filters",
        "//fft",
        "//histograms",
        "//keypoints",
        "//misc",
        "//ml:decision_trees",
        "//ml:kmeans",
        "//tracking",
        "//transformations",
        "@absl//absl/strings",
        "@gflags",
        "@glog",
    ],
)
