load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_test(
    name = "convolution_test",
    srcs = ["convolution_test.cc"],
    deps = [
        "@absl//absl/status",  # status is required for strings?
        "@absl//absl/strings",
        "@glog",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "filters",
    srcs = ["filters.cc"],
    hdrs = ["filters.h"],
    deps = [
        "//:opencv",
        "@absl//absl/status",
        "@absl//absl/strings",
        "@glog",
    ],
)

cc_binary(
    name = "main_cc",
    srcs = ["main.cc"],
    data = ["//testdata"],
    deps = [
        ":filters",
        "@absl//absl/flags:parse",
        "@absl//absl/log",
        "@absl//absl/log:check",
        "@absl//absl/status",
    ],
)
