package(default_visibility = ["//visibility:public"])

cc_library(
    name = "keypoints",
    srcs = ["keypoints.cc"],
    hdrs = ["keypoints.h"],
    deps = [
        "//:opencv",
        "//util",
        "@absl//absl/algorithm:container",
        "@absl//absl/status",
        "@absl//absl/strings",
        "@glog",
    ],
)
