package(default_visibility = ["//visibility:public"])
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")

cc_library(
    name = "keypoints",
    srcs = ["keypoints.cc"],
    hdrs = ["keypoints.h"],
    deps = [
        "//:opencv",
        "//util",
        "@absl//absl/algorithm:container",
        "@absl//absl/status",
        "@absl//absl/strings",
        "@glog",
    ],
)
