load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "keypoints",
    srcs = ["keypoints.cc"],
    hdrs = ["keypoints.h"],
    deps = [
        "//:opencv",
        "//util",
        "@absl//absl/algorithm:container",
        "@absl//absl/status",
        "@absl//absl/strings",
        "@glog",
    ],
)

cc_binary(
    name = "main_cc",
    srcs = ["main.cc"],
    data = ["//testdata"],
    deps = [
        ":keypoints",
        "@absl//absl/flags:parse",
        "@absl//absl/log",
        "@absl//absl/log:check",
        "@absl//absl/status",
    ],
)
