package(default_visibility = ["//visibility:public"])
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")

cc_library(
    name = "misc",
    srcs = ["misc.cc"],
    hdrs = ["misc.h"],
    data = ["//testdata"],
    deps = [
        "//:opencv",
        "@absl//absl/status",
        "@absl//absl/strings",
        "@absl//absl/strings:str_format",
        "@glog",
    ],
)
