load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "misc",
    srcs = ["misc.cc"],
    hdrs = ["misc.h"],
    data = ["//testdata"],
    deps = [
        "//:opencv",
        "@absl//absl/status",
        "@absl//absl/strings",
        "@absl//absl/strings:str_format",
        "@glog",
    ],
)

cc_binary(
    name = "main_cc",
    srcs = ["main.cc"],
    deps = [
        ":misc",
        "@absl//absl/flags:parse",
        "@absl//absl/log",
        "@absl//absl/log:check",
        "@absl//absl/status",
    ],
)
