package(default_visibility = ["//visibility:public"])
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")

cc_library(
    name = "kmeans",
    srcs = ["kmeans.cc"],
    hdrs = ["ml.h"],
    deps = [
        "//:opencv",
        "@absl//absl/status",
        "@absl//absl/strings",
        "@glog",
    ],
)

cc_library(
    name = "decision_trees",
    srcs = ["decision_trees.cc"],
    hdrs = ["ml.h"],
    deps = [
        "//:opencv",
        "@absl//absl/status",
        "@absl//absl/strings",
        "@glog",
    ],
)
