load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")

cc_binary(
    name = "stitcher_main",
    srcs = ["stitcher_main.cc"],
    data = ["//stitcher/testdata"],
    deps = [
        "//:opencv",
        "@absl//absl/flags:flag",
        "@absl//absl/flags:parse",
        "@absl//absl/status",
        "@absl//absl/status:statusor",
        "@absl//absl/strings",
        "@gflags",
        "@glog",
        "@status_macros",
    ],
)
