package(default_visibility = ["//visibility:public"])

cc_library(
    name = "transformations",
    srcs = ["transformations.cc"],
    hdrs = ["transformations.h"],
    deps = [
        "//:opencv",
        "@absl//absl/status",
        "@absl//absl/strings",
        "@glog",
    ],
)

cc_binary(
    name = "homography_main",
    srcs = ["homography_main.cc"],
    data = ["//testdata"],
    deps = [
        "//:opencv",
        "@absl//absl/flags:flag",
        "@absl//absl/flags:parse",
        "@absl//absl/status",
        "@absl//absl/strings",
        "@gflags",
        "@glog",
    ],
)
